# OpenAnimationReplacer-RaySense

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  README.md  Report.md  Update_PatchNote_260223.md  vcpkg-configuration.json  vcpkg.json
src/: Hooks.cpp  Hooks.h  OARConditions.cpp  OARConditions.h  RaySenseLogic.cpp  RaySenseLogic.h  ShadowsLogic.cpp  ShadowsLogic.h  main.cpp
src_backup_20260209/: Hooks.cpp  PCH.h  ShadowsLogic.cpp  ShadowsLogic.h  main.cpp  main.cpp.bak
